<resources>
    <string name="app_name">Placebook</string>
    <string name="title_activity_maps">Map</string>
    <string name="bookmark_image">Bookmark image</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="notes">Notes</string>
    <string name="enter_notes">Enter notes</string>
    <string name="category">category</string>
    <string name="openDrawble">Open Drawble</string>
    <string name="closeDrawble">Close Drawble</string>

</resources>