<?xml version="1.0" encoding="utf-8"?>

    <layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


     <data>
         <variable
             name="bookmarkDetailView"
             type="com.example.placebook.viewmodel.BookmarkDetailViewModel.BookemarkerView" />


     </data>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <com.google.android.material.appbar.MaterialToolbar
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toolbarId="@+id/toolbar">


                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:popupTheme="@style/AppTheme.PopupOverlay" />
                </com.google.android.material.appbar.MaterialToolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageViewPlace"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:maxHeight="300dp"
                        android:scaleType="fitCenter"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewName"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toStartOf="@+id/barrier1"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextName"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewPlace"
                        android:layout_marginLeft="8dp" />



                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewNotes"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:text="@string/notes"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/barrier1"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextNotes"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewName"
                        android:layout_marginLeft="8dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewPhone"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/phone"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextPhone"
                        app:layout_constraintEnd_toStartOf="@+id/barrier1"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewNotes"
                        android:layout_marginLeft="8dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textViewAddress"
                        style="@style/BookmarkLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:layout_marginStart="8dp"
                        app:layout_constraintEnd_toStartOf="@+id/barrier1"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintBaseline_toBaselineOf="@+id/editTextAddress"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPhone"
                        android:layout_marginLeft="8dp" />

                    <androidx.constraintlayout.widget.Barrier
                        android:id="@+id/barrier1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:barrierDirection="start"
                        app:constraint_referenced_ids="editTextName, editTextNotes,editTextPhone, editTextAddress" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        style="@style/BookmarkEditText"
                        android:text="@{bookmarkDetailView.name}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@+id/imageViewPlace"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNotes"
                        style="@style/BookmarkEditText"
                        android:text="@{bookmarkDetailView.notes}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_notes"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@+id/editTextName"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhone"
                        style="@style/BookmarkEditText"
                        android:text="@{bookmarkDetailView.phone}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@+id/editTextNotes"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="8dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAddress"
                        style="@style/BookmarkEditText"
                        android:layout_width="0dp"
                        android:text="@{bookmarkDetailView.address}"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textMultiLine"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/barrier1"
                        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="16dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="bottom|end"
                app:srcCompat="@android:drawable/ic_dialog_email"
                android:contentDescription="send" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </layout>